--- a/_posts/2020-12-21-post2.md
+++ b/_posts/2020-12-21-post2.md
@@ -3,9 +3,9 @@ layout: post
 title: "[SpringBoot] 방학동안 Spring Boot 공부하기"
 comments: true
 tags:
-- Post
-- Spring Boot
-- Backend
+- post
+- springboot
+- backend
 ---
 # <strong>방학동안 Spring Boot 공부하기</strong>  
 <p>
