[POST] Update 2020-12-22-post.md

--- a/_posts/2020-12-17-post1.md
+++ b/_posts/2020-12-17-post1.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: "[Jekyll] 깃허브 블로그 시작"
+title: "[Blog] 깃허브 블로그 시작"
 comments: true
 tags:
 - post
+- blog
 ---
 
 # <strong>Jekyll을 이용한 깃허브 블로그</strong> 
