--- a/_posts/2020-12-28-post4.md
+++ b/_posts/2020-12-28-post4.md
@@ -6,9 +6,9 @@ tags:
 - post
 - springboot
 ---
-# <strong>Spring Boot 기초 다지기</strong>  
+# <strong>#Spring Boot 기초 다지기</strong>  
 
-## <strong>#본격적인 학습을 하기 전에<strong>
+## <strong>본격적인 학습을 하기 전에<strong>
 우선 `Java 11`과 `IDE`가 설치되어있어야 한다. `Java 8`이 이미 노트북에 설치가 되어있었지만 강의에서 `Java 11` 이외의 버전을 사용하면 정상 동작하지 않을 가능성이 높다는 주의를 줬기에 `Java 11`로 다시 설치했다. `IDE`로는 `Eclipse`와 `IntelliJ` 중에 `IntelliJ`를 선택했다. 
 > Java ver.: 11  
 > IDE: IntelliJ
