--- a/_posts/2021-01-03-post5.md
+++ b/_posts/2021-01-03-post5.md
@@ -9,14 +9,14 @@ tags:
 ---
 # <strong># Spring Boot 기초 다지기2</strong>  
 
-## <strong>정적 컨텐츠<strong>
+## <strong>정적 컨텐츠</strong>
 정적 컨텐츠 html 파일은 `src/main/resources/static`에 위치한다. 스프링 컨테이너는 해당 html 관련 컨트롤러가 없으면 `static`에 있는 html을 웹에 띄워준다.
 
 ## <strong>MVC와 템플릿 엔진</strong>
 > MVC : Model, View, Controller
 
 다음과 같은 예제로 MVC에 대해 알아봤다.
-### <strong>Controller / Model</strong>
+#### <strong>Controller / Model</strong>
 `src/main/java/hello.hellospring/contoller/HelloController.java`
 ```java
 @Controller
@@ -29,7 +29,7 @@ public class HelloController {
 }
 ```
 
-### <strong>View</strong>
+#### <strong>View</strong>
 `src/main/resources/templates/hello-template.html`
 ```html
 <html xmlns:th="http://www.thymeleaf.org">
@@ -41,7 +41,7 @@ public class HelloController {
 
 ## <strong>API</strong>
 API는 @ResponseBody 어노테이션을 이용한 문자 반환 예제, @ResponseBody 어노테이션을 이용한 객체 반환 예제 두 가지를 학습했다.
-### <strong>@ResponseBody 문자 반환</strong>
+#### <strong>@ResponseBody 문자 반환</strong>
 ```java
 @Controller
 public class HelloController {
@@ -55,7 +55,7 @@ public class HelloController {
 `@ResponseBody`를 사용하면 `viewResolver`를 사용하지 않는다. 대신, `HTTP의 BODY`에 문자 내용을 `직접 반환`한다.
 
 
-### <strong>@ResponseBody 객체 반환</strong>
+#### <strong>@ResponseBody 객체 반환</strong>
 ```java
 @Controller
 public class HelloController {
@@ -80,8 +80,8 @@ public class HelloController {
 `@ResponseBody`를 사용하고, 객체를 반환하면 객체가 `JSON`으로 변환된다.
 
 ### <strong> `@ResponseBody`를 사용하면? </strong>
-> `HTTP의 BODY`에 문자 내용을 `직접 반환`
-> `viewResolver` 대신에 `HttpMessageConverter`가 동작
-> 기본 문자처리: `StringHttpMessageConverter`
-> 기본 객체처리: `MappingJackson2HttpMessageConverter`
+> `HTTP의 BODY`에 문자 내용을 `직접 반환`  
+> `viewResolver` 대신에 `HttpMessageConverter`가 동작  
+> 기본 문자처리: `StringHttpMessageConverter`  
+> 기본 객체처리: `MappingJackson2HttpMessageConverter`  
 > byte 처리 등등 기타 여러 HttpMessageConverter가 기본으로 등록되어 있음
