[POST] Update 2021-01-03-post5.md

--- a/_posts/2021-01-03-post5.md
+++ b/_posts/2021-01-03-post5.md
@@ -1,18 +1,18 @@
 ---
 layout: post
-title: "[SpringBoot] Spring Boot 기초 다지기2"
+title: "[SpringBoot] Spring Boot 기초 다지기-정적컨텐츠, MVC, API"
 comments: true
 tags:
 - post
 - springboot
 - backend
 ---
-# <strong># Spring Boot 기초 다지기2</strong>  
+# <strong># Spring Boot 기초 다지기-정적컨텐츠, MVC, API</strong>  
 
-## <strong>정적 컨텐츠</strong>
+## <strong>1. 정적 컨텐츠</strong>
 정적 컨텐츠 html 파일은 `src/main/resources/static`에 위치한다. 스프링 컨테이너는 해당 html 관련 컨트롤러가 없으면 `static`에 있는 html을 웹에 띄워준다.
 
-## <strong>MVC와 템플릿 엔진</strong>
+## <strong>2. MVC와 템플릿 엔진</strong>
 > MVC : Model, View, Controller
 
 다음과 같은 예제로 MVC에 대해 알아봤다.
@@ -39,7 +39,7 @@ public class HelloController {
 </html>
 ```
 
-## <strong>API</strong>
+## <strong>3. API</strong>
 API는 @ResponseBody 어노테이션을 이용한 문자 반환 예제, @ResponseBody 어노테이션을 이용한 객체 반환 예제 두 가지를 학습했다.
 #### <strong>@ResponseBody 문자 반환</strong>
 ```java
